// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles profile click 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <div
      aria-label="Profile Card"
      class="card"
      role="main"
    >
      <div
        class="card-header"
      >
        <h5
          class="card-title"
        >
          Profiles
        </h5>
      </div>
      <div
        class="card-body"
      >
        <ul
          class="list-group"
        >
          <li
            class="list-group-item profileItem active"
          >
            <div>
              <label
                for="name-1-input"
              >
                Name
              </label>
              <input
                autofocus=""
                class="form-control"
                id="name-1-input"
                type="text"
                value="Ben"
              />
            </div>
            <div>
              <label
                for="type-1-select"
              >
                Type
              </label>
              <select
                class="form-control"
                id="type-1-select"
              >
                <option>
                  guest
                </option>
                <option>
                  user
                </option>
                <option>
                  admin
                </option>
              </select>
            </div>
            <div
              class="buttonWrapper"
            >
              <button
                class="btn btn-danger"
              >
                Delete
              </button>
            </div>
          </li>
          <li
            class="list-group-item profileItem"
          >
            <div>
              <label
                for="name-2-input"
              >
                Name
              </label>
              <input
                class="form-control"
                id="name-2-input"
                type="text"
                value="Sue"
              />
            </div>
            <div>
              <label
                for="type-2-select"
              >
                Type
              </label>
              <select
                class="form-control"
                id="type-2-select"
              >
                <option>
                  guest
                </option>
                <option>
                  user
                </option>
                <option>
                  admin
                </option>
              </select>
            </div>
            <div
              class="buttonWrapper"
            >
              <button
                class="btn btn-danger"
              >
                Delete
              </button>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="card-footer"
      >
        <div
          class="wrapper"
        >
          <button
            class="btn btn-primary"
          >
            Create New Profile
          </button>
        </div>
      </div>
    </div>
    <div
      aria-label="ToDo Card"
      class="card"
      role="complementary"
    >
      <div
        class="card-header"
      >
        <h5
          class="card-title"
        >
          ToDos for Ben
        </h5>
      </div>
      <div
        class="card-body"
      >
        <ul
          class="list-group"
        >
          <li
            class="list-group-item toDoItem"
          >
            <div>
              <label
                for="isComplete-1-input"
              >
                Complete?
              </label>
              <input
                checked=""
                class="form-control checkbox"
                id="isComplete-1-input"
                type="checkbox"
              />
            </div>
            <div>
              <label
                for="description-1-input"
              >
                Description
              </label>
              <input
                class="form-control"
                id="description-1-input"
                type="text"
                value="eat tacos"
              />
            </div>
            <div
              class="buttonWrapper"
            >
              <button
                class="btn btn-danger"
              >
                Delete
              </button>
            </div>
          </li>
          <li
            class="list-group-item toDoItem"
          >
            <div>
              <label
                for="isComplete-2-input"
              >
                Complete?
              </label>
              <input
                class="form-control checkbox"
                id="isComplete-2-input"
                type="checkbox"
              />
            </div>
            <div>
              <label
                for="description-2-input"
              >
                Description
              </label>
              <input
                class="form-control"
                id="description-2-input"
                type="text"
                value="drink milk"
              />
            </div>
            <div
              class="buttonWrapper"
            >
              <button
                class="btn btn-danger"
              >
                Delete
              </button>
            </div>
          </li>
          <li
            class="list-group-item toDoItem"
          >
            <div>
              <label
                for="isComplete-3-input"
              >
                Complete?
              </label>
              <input
                class="form-control checkbox"
                id="isComplete-3-input"
                type="checkbox"
              />
            </div>
            <div>
              <label
                for="description-3-input"
              >
                Description
              </label>
              <input
                class="form-control"
                id="description-3-input"
                type="text"
                value="walk and chew gum"
              />
            </div>
            <div
              class="buttonWrapper"
            >
              <button
                class="btn btn-danger"
              >
                Delete
              </button>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="card-footer"
      >
        <div
          class="wrapper"
        >
          <button
            class="btn btn-primary"
          >
            Create New ToDo
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`handles profile delete click 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <div
      aria-label="Profile Card"
      class="card"
      role="main"
    >
      <div
        class="card-header"
      >
        <h5
          class="card-title"
        >
          Profiles
        </h5>
      </div>
      <div
        class="card-body"
      >
        <ul
          class="list-group"
        >
          <li
            class="list-group-item profileItem"
          >
            <div>
              <label
                for="name-2-input"
              >
                Name
              </label>
              <input
                class="form-control"
                id="name-2-input"
                type="text"
                value="Sue"
              />
            </div>
            <div>
              <label
                for="type-2-select"
              >
                Type
              </label>
              <select
                class="form-control"
                id="type-2-select"
              >
                <option>
                  guest
                </option>
                <option>
                  user
                </option>
                <option>
                  admin
                </option>
              </select>
            </div>
            <div
              class="buttonWrapper"
            >
              <button
                class="btn btn-danger"
              >
                Delete
              </button>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="card-footer"
      >
        <div
          class="wrapper"
        >
          <button
            class="btn btn-primary"
          >
            Create New Profile
          </button>
        </div>
      </div>
    </div>
    <div
      aria-label="ToDo Card"
      class="card"
      role="complementary"
    >
      <div
        class="card-header"
      >
        <h5
          class="card-title"
        >
          ToDos 
        </h5>
      </div>
      <div
        class="card-body"
      >
        <ul
          class="list-group"
        />
      </div>
      <div
        class="card-footer"
      >
        <div
          class="wrapper"
        >
          <button
            class="btn btn-primary disabled"
          >
            Create New ToDo
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders the app 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <div
      aria-label="Profile Card"
      class="card"
      role="main"
    >
      <div
        class="card-header"
      >
        <h5
          class="card-title"
        >
          Profiles
        </h5>
      </div>
      <div
        class="card-body"
      >
        <ul
          class="list-group"
        >
          <li
            class="list-group-item profileItem"
          >
            <div>
              <label
                for="name-1-input"
              >
                Name
              </label>
              <input
                class="form-control"
                id="name-1-input"
                type="text"
                value="Ben"
              />
            </div>
            <div>
              <label
                for="type-1-select"
              >
                Type
              </label>
              <select
                class="form-control"
                id="type-1-select"
              >
                <option>
                  guest
                </option>
                <option>
                  user
                </option>
                <option>
                  admin
                </option>
              </select>
            </div>
            <div
              class="buttonWrapper"
            >
              <button
                class="btn btn-danger"
              >
                Delete
              </button>
            </div>
          </li>
          <li
            class="list-group-item profileItem"
          >
            <div>
              <label
                for="name-2-input"
              >
                Name
              </label>
              <input
                class="form-control"
                id="name-2-input"
                type="text"
                value="Sue"
              />
            </div>
            <div>
              <label
                for="type-2-select"
              >
                Type
              </label>
              <select
                class="form-control"
                id="type-2-select"
              >
                <option>
                  guest
                </option>
                <option>
                  user
                </option>
                <option>
                  admin
                </option>
              </select>
            </div>
            <div
              class="buttonWrapper"
            >
              <button
                class="btn btn-danger"
              >
                Delete
              </button>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="card-footer"
      >
        <div
          class="wrapper"
        >
          <button
            class="btn btn-primary"
          >
            Create New Profile
          </button>
        </div>
      </div>
    </div>
    <div
      aria-label="ToDo Card"
      class="card"
      role="complementary"
    >
      <div
        class="card-header"
      >
        <h5
          class="card-title"
        >
          ToDos 
        </h5>
      </div>
      <div
        class="card-body"
      >
        <ul
          class="list-group"
        />
      </div>
      <div
        class="card-footer"
      >
        <div
          class="wrapper"
        >
          <button
            class="btn btn-primary disabled"
          >
            Create New ToDo
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
